issue --> space around .title & b.radius overflow

--- a/style.css
+++ b/style.css
@@ -45,21 +45,45 @@ main{
     top:6.3vh;
     z-index: 1;
 }
-    
+
+
+.test{
+    width:100%;
+    max-height:6.3vh;
+    position: sticky;
+    z-index: 3;
+    top:6.3vh;
+}
 
 .title{
+    width:100%;
+    height:6.3vh;
     background: purple;
-    border-radius:20px 20px 0 0;
+
     position: sticky;
     top:6.3vh;
     z-index: 3;
+
+    border-radius:0;
+    transform: translateY(0vh);
+    overflow: hidden;
+
 }
 
-/* @media (max-height: 6.3vh) {
-    .title {
-      border-radius: 0;
-    }
-  } */
+.radius{
+    width: 100%;
+    height:6.3vh;
+    background: rgb(209, 88, 209);
+
+    position: sticky;
+    top:6.3vh;
+    z-index: 3;
+
+    transform: translateY(-6.3vh);
+    border-radius: 20px 20px 0 0;
+    overflow: hidden;
+}
+
 
 .cards{
     background:pink;
@@ -81,3 +105,25 @@ footer{
     position: sticky;
     z-index: 3;
 }
+
+
+/* @media (min-height: 99vh){
+    .title{
+        border-radius:0px;
+    }
+} */
+
+
+    /* animation-name: border-radius;
+    animation-duration: 2s;
+    animation-fill-mode:forwards;
+}
+
+@keyframes border-radius {
+    from {
+      border-radius: 20px 20px 0 0;
+    }
+    to {
+      border-radius: 0;
+    }
+  } */
